// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept a selected outcome 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                  <circle
                    cx="6"
                    cy="6"
                    fill="#20e0b4"
                    id="fill"
                    r="6"
                    transform="translate(3 3)"
                  />
                </svg>
                <input
                  checked=""
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should hide radio selections 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="1"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show no as winning token 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-dnqmqq fBoLxT"
                >
                  <img
                    alt="Winning Outcome"
                    class="sc-iwsKbI jiPRqw"
                    src="badge.svg"
                  />
                </div>
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              0.00
            </td>
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-dnqmqq fBoLxT"
                />
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              0.00
            </td>
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show probabilities 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      0.75%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG ihXpTy"
                      color="#00be95"
                      width="0.75"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      0.25%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG hupGLW"
                      color="#acacac"
                      width="0.25"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show yes as winning token 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-dnqmqq fBoLxT"
                >
                  <img
                    alt="Winning Outcome"
                    class="sc-iwsKbI jiPRqw"
                    src="badge.svg"
                  />
                </div>
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              0.00
            </td>
            <td
              class="sc-EHOje sc-kAzzGY foKdFt"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-dnqmqq fBoLxT"
                />
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              0.00
            </td>
            <td
              class="sc-EHOje sc-kAzzGY CGYbl"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should work with disabled columns 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should work with minimal props 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-bdVaJa ietEQA"
    >
      <table
        class="sc-bwzfXH ivNcPN"
      >
        <thead
          class="sc-htpNat KtFsv"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <th
              class="sc-ifAKCX giynAj"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-ifAKCX ipPSVf"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-bZQynM bOrPFB"
        >
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-bxivhb gowuVX"
          >
            <td
              class="sc-EHOje sc-chPdSV bRCJQq"
            >
              <div
                class="sc-gzVnrw WkcJn"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              <div
                class="sc-htoDjs fOXRuD"
              >
                <div
                  class="sc-gZMcBi cwfHym"
                >
                  <div
                    class="sc-gqjmRU kpOMxt"
                  >
                    <h2
                      class="sc-VigVT eyMLak"
                    >
                      No
                    </h2>
                    <p
                      class="sc-jTzLTM hqAejy"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-fjdhpX iZcRRn"
                  >
                    <div
                      class="sc-jzJRlG dxyKLL"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
            <td
              class="sc-EHOje cxvido"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
